--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -13,29 +14,35 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         android:usesCleartextTraffic="true">
+        <activity android:name=".PhoneDial">
+            <intent-filter>
+                <action android:name="android.intent.action.CALL" />
 
+                <data android:scheme="tel" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <action android:name="android.intent.action.CALL_PRIVILEGED" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".MessageScreen">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+
+                <data android:mimeType="text/plain" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".PhoneActivity"
             android:label="@string/title_activity_phone"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.CALL" />
-                <data android:scheme="tel" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <action android:name="android.intent.action.CALL_PRIVILEGED" />
-            </intent-filter>
-        </activity>
 
+        </activity>
         <activity
             android:name=".sendSmsAct"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.SEND" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <data android:mimeType="text/plain" />
-            </intent-filter>
-        </activity>
-
+            android:label="@string/app_name"></activity>
         <activity android:name=".EmailSender">
             <intent-filter>
                 <action android:name="android.intent.action.EmailSender" />
@@ -46,8 +53,10 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
